SOLR-18367: fix CI red -- spotless, forbiddenApis, validateLogCalls
- spotlessApply on 5 files with javadoc/line-wrap violations.
- Collections.emptyMap()/singletonMap() -> Map.of() in
  CollectionHandlingUtilsTest (forbiddenApisTest).
- Drop an eager e.toString() in a parameterized log call
  (validateLogCalls flags it as suspicious).